--- a/app/views/hellos/index.html.erb
+++ b/app/views/hellos/index.html.erb
@@ -1,3 +1,5 @@
-<h1>ツイッター</h1>
-<p>日付: <%= Date.today %></P>
-<%= link_to 'list', apps_path %>
+this file is inde.html.erbでえええええす
+
+<header>
+  <h2 class="content">つぶやきの楽しさ</h2>
+</header>
