--- a/app/views/apps/_form.html.erb
+++ b/app/views/apps/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: app, local: true) do |form| %>
+<%= form_with(model: app, local: true, url: confirm_apps_path) do |form| %>
   <% if app.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(app.errors.count, "error") %> prohibited this app from being saved:</h2>
