--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,11 +1,13 @@
 <p id="notice"><%= notice %></p>
-
-<h1>ホーム</h1>
+<header>
+<h2>ホーム</h2>
+<div class = "post"><%= link_to 'New Post', new_app_path %></div>
 <%= form_tag('/apps', method: 'get') do %>
 <%= label_tag(:content_key, 'Search content:') %>
 <%= text_field_tag(:content_key) %>
 <%= submit_tag('Search') %> <%= link_to 'Clear', apps_path %>
 <% end %>
+</header>
 
 <table class='table table-striped table-hover'>
   <thead>
@@ -28,5 +30,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New App', new_app_path %>
