--- a/app/views/apps/_form.html.erb
+++ b/app/views/apps/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: app, local: true, url: confirm_apps_path) do |form| %>
+<%= form_with(model: app, local: true, url: choose_new_or_edit
+) do |form| %>
   <% if app.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(app.errors.count, "error") %> prohibited this app from being saved:</h2>
@@ -10,10 +11,11 @@
       </ul>
     </div>
   <% end %>
+  <%= form.hidden_field :id, :value => @app.id %>
 
   <div class="field">
     <%= form.label :content %>
-    <%= form.text_area :content %>
+    <%=form.text_area :content %>
   </div>
 
   <div class="actions">
