confirm画面エラー修正

--- a/app/assets/stylesheets/hellos.scss
+++ b/app/assets/stylesheets/hellos.scss
@@ -5,6 +5,7 @@ header {
   background-color: #FF00FF;
   width: 100%;
   weight: 70px;
+
 }
 
 .site-wrapper {
@@ -53,6 +54,8 @@ footer p {
 
 h1{
   background-color:blue;
+  height: 50px;
+  margin: 0;
 }
 
 
